; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utalloc.c_acpi_ut_validate_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utalloc.c_acpi_ut_validate_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_buffer = type { i64, i32 }

@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@ACPI_NO_BUFFER = common dso_local global i64 0, align 8
@ACPI_ALLOCATE_BUFFER = common dso_local global i64 0, align 8
@ACPI_ALLOCATE_LOCAL_BUFFER = common dso_local global i64 0, align 8
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ut_validate_buffer(%struct.acpi_buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_buffer*, align 8
  store %struct.acpi_buffer* %0, %struct.acpi_buffer** %3, align 8
  %4 = load %struct.acpi_buffer*, %struct.acpi_buffer** %3, align 8
  %5 = icmp ne %struct.acpi_buffer* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %7, i32* %2, align 4
  br label %37

8:                                                ; preds = %1
  %9 = load %struct.acpi_buffer*, %struct.acpi_buffer** %3, align 8
  %10 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @ACPI_NO_BUFFER, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %26, label %14

14:                                               ; preds = %8
  %15 = load %struct.acpi_buffer*, %struct.acpi_buffer** %3, align 8
  %16 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @ACPI_ALLOCATE_BUFFER, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %26, label %20

20:                                               ; preds = %14
  %21 = load %struct.acpi_buffer*, %struct.acpi_buffer** %3, align 8
  %22 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @ACPI_ALLOCATE_LOCAL_BUFFER, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %20, %14, %8
  %27 = load i32, i32* @AE_OK, align 4
  store i32 %27, i32* %2, align 4
  br label %37

28:                                               ; preds = %20
  %29 = load %struct.acpi_buffer*, %struct.acpi_buffer** %3, align 8
  %30 = getelementptr inbounds %struct.acpi_buffer, %struct.acpi_buffer* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %28
  %34 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %34, i32* %2, align 4
  br label %37

35:                                               ; preds = %28
  %36 = load i32, i32* @AE_OK, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %35, %33, %26, %6
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
